--- a/_posts/2024-04-12-111.md
+++ b/_posts/2024-04-12-111.md
@@ -49,11 +49,14 @@ Jak zwykle, będziemy drążyć cztery kąty technologii: od technik po narzędz
 Będzie z czego wybierać, bo każda kategoria ma swoje poziomy dojrzałości – od pełnego Adopt, przez ciekawy Trial, aż po krytyczne Assess i zdecydowane Hold. Przygotujcie się na solidną dawkę tech-wiedzy i zobaczcie, co w tech-świecie piszczy i jak to może wpłynąć na Wasze projekty. Zaczynamy!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
-- [Technology Radar An opinionated guide to today’s technology landscape](https://www.thoughtworks.com/content/dam/thoughtworks/documents/radar/2024/04/tr_technology_radar_vol_30_en.pdf)
+- [PDF - Technology Radar vol. 30](https://www.thoughtworks.com/content/dam/thoughtworks/documents/radar/2024/04/tr_technology_radar_vol_30_en.pdf)
 - [Thoughtworks: Technology Radar An opinionated guide to today's technology landscape](https://www.thoughtworks.com/radar)
 - [GitHub - vanna-ai/vanna: 🤖 Chat with your SQL database 📊. Accurate Text-to-SQL Generation via LLMs using RAG 🔄.](https://github.com/vanna-ai/vanna)
+- [Demo Text to SQL](https://github.com/raosinMS/demos_public/tree/main/OpenAISQL)
 - [Kyverno](https://kyverno.io/)
 
 ### Transkrypcja
