--- a/_posts/2023-01-27-59.md
+++ b/_posts/2023-01-27-59.md
@@ -3,13 +3,28 @@ layout: post
 title: '#59 Patoarchitekci Short #17'
 date: 2023-01-27 08:00:00 +0200
 description: 
-img: "59"
+episode: "59"
 tags: ["vr","amazon","kubernetes","google","docker"]
 spreaker: 52551048
+apple: patoarchitekci-short-17/id1477067604?i=1000596864061
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/59/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/7IhyzkFyASuPqi8aP7c4hT)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-17/id1477067604?i=1000596864061)
+
+  ➡️ [YouTube]()
 ---
 Czy warto wszędzie stosować Kubernetesa i Dockera? Masowe zwolnienia w sektorze big tech, The Ultimate Guide to the Software Architecture 
 \- oraz... co wg. Elona może oznaczać "some extra crunching" w kontekście naprawiania błędów Twittera 😅
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
