--- a/_posts/2023-02-03-60.md
+++ b/_posts/2023-02-03-60.md
@@ -3,12 +3,27 @@ layout: post
 title: '#60 O GitOps na luźno'
 date: 2023-02-03 08:00:00 +0200
 description: 
-img: "60"
+episode: "60"
 tags: ["docker","kubernetes","gitops","argo","cubeml"]
 spreaker: 52614422
+apple: o-gitops-na-lu%C5%BAno/id1477067604?i=1000597824895
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/60/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/6OznfEaCTyX8FsYmovdfKi)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/o-gitops-na-lu%C5%BAno/id1477067604?i=1000597824895)
+
+  ➡️ [YouTube]()
 ---
 Czym jest GitOps? Dziś o Argo, Flux, IaaS - a także: Argo/Flux vs Pipeline. Hit czy kit?
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
