--- a/_posts/2023-02-10-61.md
+++ b/_posts/2023-02-10-61.md
@@ -3,12 +3,27 @@ layout: post
 title: '#61 Patoarchitekci Short #18'
 date: 2023-02-10 08:00:00 +0200
 description: 
-img: "61"
+episode: "61"
 tags: ["hashicorp","fairwinds","kubernetes","trivy","dokumentacja"]
 spreaker: 52680492
+apple: patoarchitekci-short-18/id1477067604?i=1000598987464
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/61/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/3hTeqMh68SAANysxaja4bN)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-18/id1477067604?i=1000598987464)
+
+  ➡️ [YouTube]()
 ---
 Nowy Short, tym razem jako temat dokumentacja - a dokładniej o narzędziu Hermes od HashiCorp. Dodatkowo o Kubernetes Benchmark Report z 2023 od Fairwinds, Aqua Security Trivy - i nie tylko!
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
