--- a/_posts/2023-02-17-62.md
+++ b/_posts/2023-02-17-62.md
@@ -4,12 +4,26 @@ title: '#62 Architektura single i multi tenant'
 date: 2023-02-17 08:00:00 +0200
 description: 
 episode: "62"
-tags: []
+tags: ["architektura","it","cloud"]
 spreaker: 52754192
 apple: architektura-single-i-multi-tenant/id1477067604?i=1000600109555
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/62/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/2ybFueVHVN4vPIDr1e2PEs)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/architektura-single-i-multi-tenant/id1477067604?i=1000600109555)
+
+  ➡️ [YouTube]()
 ---
 Multi-tenancy vs single-tenancy! Czyli m. in. implementacja pod B2C a B2B, sposoby implementacji, co w kodzie... a co w infrastrukturze? 
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
