--- a/_posts/2023-02-24-63.md
+++ b/_posts/2023-02-24-63.md
@@ -7,10 +7,24 @@ episode: "63"
 tags: ["cloud","cncf","ankieta","servicemesh","cassandra","kafka"]
 spreaker: 52824469
 apple: patoarchitekci-short-19/id1477067604?i=1000601388338
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/63/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/10f5ptjg2e1qkX77YYBDOA)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-19/id1477067604?i=1000601388338)
+
+  ➡️ [YouTube]()
 ---
 Co słychać w CNCFie? Jakie projekty zyskały na popularności? Czy będzie ucieczka z cloudu? 
 Dziś o ankiecie od Datadoga i Dynatrace'a... i co możemy z niej wywnioskować! 
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
