--- a/_posts/2023-03-03-64.md
+++ b/_posts/2023-03-03-64.md
@@ -7,10 +7,24 @@ episode: "64"
 tags: ["devops","platform","engineer","engineering","serverless","google","ocr","infra"]
 spreaker: 53071283
 apple: patoarchitekci-short-20/id1477067604?i=1000602592412
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/64/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/17q3lkbNfvkG7xsDiIhUhk)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-20/id1477067604?i=1000602592412)
+
+  ➡️ [YouTube]()
 ---
 Dziś Patoarchitekci o DevOpsie (i DevOpsach...), platform engineeringu, Internal Development Platform...
 a także: cloud isn't dead, oraz o nowej technologii od Google! :D
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
