--- a/_posts/2023-03-10-65.md
+++ b/_posts/2023-03-10-65.md
@@ -7,6 +7,18 @@ episode: "65"
 tags: ["mrsk","autoskalowanie","serviceweaver"]
 spreaker: 53147028
 apple: patoarchitekci-short-21/id1477067604?i=1000603555326
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/65/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/3TrrOMCtExmR8m15vdcLqv)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci-short-21/id1477067604?i=1000603555326)
+
+  ➡️ [YouTube]()
 ---
 Jak zwykle dzieje się dużo:
 Maersk, hey.com a AWS i onprem,
@@ -16,9 +28,10 @@ a także Google i Service Weaver for Writing Distributed Applications
 ...i wiele więcej! 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
-- [Introducing Service Weaver: A Framework for Writing Distributed Applications  ](https://opensource.googleblog.com/2023/03/introducing-service-weaver-framework-for-writing-distributed-applications.html)
 - [Udi Dahan o Service Weaver](https://twitter.com/UdiDahan/status/1631320634843361281?s=20)
 - [Introducing MRSK](https://world.hey.com/dhh/introducing-mrsk-9330a267)
 - [Dapr - Distributed Application Runtime](https://dapr.io/)
