--- a/_posts/2023-03-17-66.md
+++ b/_posts/2023-03-17-66.md
@@ -24,6 +24,8 @@ Mamy dla Was nowe znaleziska!
 Discord, Cassandra, Scylla, Spotify i nie tylko!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [How Discord Stores Trillions of Messages](https://discord.com/blog/how-discord-stores-trillions-of-messages)
