--- a/_posts/2023-03-24-67.md
+++ b/_posts/2023-03-24-67.md
@@ -23,6 +23,8 @@ newsletter:  |
 Dziś o dramie Dockera, MSie w FinOps, Infrastructure as SQL i wiele więcej! Posłuchajcie, co tym razem ciekawego znaleźli Patoarchitekci!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Live - Zdobądź wymarzoną pracę
