--- a/_posts/2023-03-31-68.md
+++ b/_posts/2023-03-31-68.md
@@ -27,6 +27,8 @@ Github Actions i bezpieczeństwo...
 Sprawdź odcinek i dowiedz się więcej!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Live - Zdobądź wymarzoną pracę
