--- a/_posts/2023-04-21-71.md
+++ b/_posts/2023-04-21-71.md
@@ -23,6 +23,8 @@ newsletter:  |
 Tym razem o Postgresie, rynku IT, a także kilka ciekawostek!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
