--- a/_posts/2023-04-28-72.md
+++ b/_posts/2023-04-28-72.md
@@ -23,6 +23,8 @@ newsletter:  |
 Jak skutecznie budować organizacje?  Czy wskaźniki HRowe przekładają się na rzeczywistość?  Co nowego w Kubernetesie?  Odpowiedzi na te pytania - i nie tylko - w najnowszym Shorcie!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Szkolenie Azure Kubernetes Service AKS Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
