--- a/_posts/2023-05-12-74.md
+++ b/_posts/2023-05-12-74.md
@@ -38,6 +38,8 @@ oraz: nowe regulacje odnośnie opensource'u przepchnięte przez Senat USA.
 Przegląd nowości ze świata IT - okiem Patoarchitektów! 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Azure Kubernetes Service (AKS) Masterclass - 13.06.2023](https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023)
