--- a/_posts/2023-05-19-75.md
+++ b/_posts/2023-05-19-75.md
@@ -34,6 +34,8 @@ Google, hype na AI a rzeczywistość
 \- a także o nowym artykule LinkedIna i zastosowaniu DORA!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Unifying Messaging Experiences across LinkedIn  ](https://engineering.linkedin.com/blog/2023/unifying-messaging-experiences-across-linkedin)
