--- a/_posts/2023-05-26-76.md
+++ b/_posts/2023-05-26-76.md
@@ -23,6 +23,8 @@ newsletter:  |
 Patoarchitekci #76  - tym razem o CloudFlare, Booking.com, czy Coinbase ma rację odnośnie Datadoga - oraz Redpanda vs. Kafka! 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Github Copilot and ChatGPT alternatives - The Pragmatic Engineer](https://blog.pragmaticengineer.com/github-copilot-alternatives/)
