--- a/_posts/2023-06-02-77.md
+++ b/_posts/2023-06-02-77.md
@@ -23,6 +23,8 @@ newsletter:  |
 Microsoft 📙 - OS Company, Cloud Company czy może AI Company? 🔔Czy i dlaczego będziemy mogli spotkać copilota dosłownie wszędzie? 🔔 Czy nadchodzi coś większego niż modele LLM? 🤔
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Microsoft Build 2023 Book of News](https://news.microsoft.com/build-2023-book-of-news/)
