--- a/_posts/2023-06-09-78.md
+++ b/_posts/2023-06-09-78.md
@@ -23,6 +23,8 @@ newsletter:  |
 Patoarchitekci Short!  Więcej o AI  i kwestiach regulacyjnych, OWASP Top Ten, open source w serwisach cloudowych... i nie tylko!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [DevEx, a New Metrics Framework from the Authors of SPACE](https://www.infoq.com/articles/devex-metrics-framework/)
