--- a/_posts/2023-06-16-79.md
+++ b/_posts/2023-06-16-79.md
@@ -23,6 +23,8 @@ newsletter:  |
 Tym razem poruszamy temat Big Techu a rozwiązań takich, jak CloudFlare, Grafana i nie tylko!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Cloudflare  Enhances Performance for Serverless Database D1](https://www.infoq.com/news/2023/06/cloudflare-serverless-d1)
