--- a/_posts/2023-06-23-80.md
+++ b/_posts/2023-06-23-80.md
@@ -23,6 +23,8 @@ newsletter:  |
 Patoarchitekci wracają z nowym shortem!  Sprawdźcie, co nowego u Netflixa, dlaczego nawet dziś warto znać etagi http... oraz co nieco o dojrzałości API !
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Migrating Netflix to GraphQL Safely](https://netflixtechblog.com/migrating-netflix-to-graphql-safely-8e1e4d4f1e72)
