--- a/_posts/2023-06-30-81.md
+++ b/_posts/2023-06-30-81.md
@@ -28,6 +28,8 @@ Patoarchitekci Short #32 - ostatni przed przerwą wakacyjną!
 i nie tylko!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [AWS Open-Sources Policy-Based Access Control Language Cedar](https://www.infoq.com/news/2023/06/aws-cedar-open-source/)
