--- a/_posts/2023-09-08-82.md
+++ b/_posts/2023-09-08-82.md
@@ -13,7 +13,13 @@ newsletter:  |
   
   Począwszy od drobnych dram takich jak HashiCorp czy sponsor links w Moq, przez drastyczny spadek wejść w StackOverflow, aż po iście ciekawy raport o mierzeniu wydajności developerów, made by Mckinsey. 
   
-  Startujemy! 
+  Startujemy!
+  
+  ## Short and sweet
+  Tutaj opis czym jest short and sweet
+  - [What Makes Some Interruptions More Disruptive Than Others? (getdx.com)](https://newsletter.getdx.com/p/developer-interruptions)
+  - [What Makes Some Interruptions More Disruptive Than Others? (getdx.com)](https://newsletter.getdx.com/p/developer-interruptions)
+  - [What Makes Some Interruptions More Disruptive Than Others? (getdx.com)](https://newsletter.getdx.com/p/developer-interruptions)
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -28,6 +34,8 @@ newsletter:  |
 ---
 Patoarchitekci Short #33: Po wakacyjnej przerwie startujemy z nowym sezonem Patoarchitektów. Będzie się działo. Na początek kilka dram min. zmiana licencji w HashiCorp czy sponsor link w Moq. Omówimy też Stack Overflow i spadek wejść o 35% (sic!), a na deser zostawiiliśmy sobie hejt na raporcie McKinsey o absurdalnych metodach mierzenia wydajności developerów. Startujemy!
 
+
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
