--- a/_posts/2023-09-15-83.md
+++ b/_posts/2023-09-15-83.md
@@ -29,6 +29,8 @@ newsletter:  |
 Patoarchitekci Short #34: Znów rzucamy mięsem. Dzisiaj wracamy na chwilę do raportu McKinsey'a i tematu badania skuteczności developerów. Wszystko za sprawą artykułu Orosza i jego komentarza do raportu. Porozmawiamy też o Oskarze Dudyczu i jego newsletterze na temat prototypowania biznesowego - raczej o wpisie Oskara, który popełnił w ramach jednego ze swoich newsletterów. Na koniec trochę o testach end-to-end. Kiedy, jak, gdzie, po co? I dlaczego część z nich warto szybko kasować? Zaczynamy?
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Gergely Orosz: Measuring developer productivity? A response to McKinsey, Part 2](https://newsletter.pragmaticengineer.com/p/measuring-developer-productivity-part-2)
