--- a/_posts/2023-09-22-84.md
+++ b/_posts/2023-09-22-84.md
@@ -40,6 +40,8 @@ newsletter:  |
 Kolejny piątek - a więc kolejny odcinek Patoarchitektów. Gorącym kartoflem na dzisiaj są umierające skille w IT. Co powinien wiedzieć specjalista, a co może sobie odpuścić. W tej kwestii nasze zdania są podzielone, więc sporo się dzieje w dzisiejszym odcinku. Na koniec robi się lekko sentymentalnie, bo rozmawiamy o programie studiów i o tym, co z perspektywy praktyków IT, powinno się tam znaleźć, co znacznie ułatwia pracę specjalistom IT. Przesłuchaj od razu!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Mechanical Sympathy - AWS Well-Architected Framework](https://wa.aws.amazon.com/wellarchitected/2020-07-02T19-33-23/wat.concept.mechanical-sympathy.en.html)
