--- a/_posts/2023-09-29-85.md
+++ b/_posts/2023-09-29-85.md
@@ -54,6 +54,8 @@ Omawiamy między innymi głośny proces Googla w USA, Azurowe Container Appsy i 
 A to tylko mały fragment z tego, o czym się rozgadaliśmy. W środku jest o wiele więcej!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [ Office of Public Affairs  ](https://www.justice.gov/opa/pr/justice-department-sues-google-monopolizing-digital-advertising-technologies)
