--- a/_posts/2023-10-06-86.md
+++ b/_posts/2023-10-06-86.md
@@ -46,6 +46,8 @@ Patoarchitekci Short #36 Dziś przygotowaliśmy dla was kilka gorących tematów
 Omawiamy najnowsze ruchy Amazona w świecie AI za ponad 4 miliardy dolarów. Szymon wciąż zastanawia się nad efektywnością pracy developerów, ale żeby nie było zbyt nudno, szybko przechodzimy do kwestii observability i analizy metryk. Na deser analiza ewolucji testowania w Microsoft. Czas start!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Infoshare Dev - konferencja IT](https://dev.infoshare.pl/)
