--- a/_posts/2023-10-13-87.md
+++ b/_posts/2023-10-13-87.md
@@ -27,6 +27,8 @@ newsletter:  |
 Przed Wami odcinek numer 87, a w nim... No cóż, robimy coś, czego dawno nie było. Bierzemy pod lupę Technology Radar od Thought Works. Będzie o tym, co nas zaskoczyło, co jest dla nas nowością i jakie WTF-y po drodze nas spotkały. Nie zostawiliśmy na tym dokumencie suchej nitki. Ale żeby było uczciwie, doceniliśmy to, co zasługiwało na docenienie :) Zatem, zapnijcie pasy i zanurzcie się w technologiczne rewelacje razem z nami
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Technology Radar  - Thoughtworks - Strategy.Design.Engineering](https://www.thoughtworks.com/content/dam/thoughtworks/documents/radar/2023/09/tr_technology_radar_vol_29_en.pdf)
