--- a/_posts/2023-10-20-88.md
+++ b/_posts/2023-10-20-88.md
@@ -40,6 +40,8 @@ Przemaglowaliśmy Mariusza dość dokładnie, więc można powiedzieć, że ten 
 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Profil Mariusza Gila na Li](https://www.linkedin.com/in/mariuszgil/)
