--- a/_posts/2023-10-27-89.md
+++ b/_posts/2023-10-27-89.md
@@ -41,6 +41,8 @@ newsletter:  |
 Przygotujcie się na prawdziwy rollercoaster w dzisiejszym odcinku. Bierzemy pod lupę finanse GitHuba i Copilota – czyżby dopłacali do tego biznesu? Google rzuca światło na disaster recovery, a Cilium świętuje swoje graduation w CNCF. W Cloudflare pojawia się Hyper Drive – sprawdzamy czy to w ogóle warte zainteresowania. I na deser – nowy tool do incident response od Grafany. Bądźcie z nami, bo dzisiaj będzie się działo!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Search Jobs  ](https://jobs.careers.microsoft.com/global/en/job/1627555/Principal-Program-Manager-Nuclear-Technology)
