--- a/_posts/2023-11-03-90.md
+++ b/_posts/2023-11-03-90.md
@@ -41,6 +41,8 @@ newsletter:  |
 W dzisiejszym odcinku rozbieramy na części pierwsze nowy opensource'owy projekt od Microsoftu - Radius. Łukasz bierze go na warsztat, więc będzie się działo. Następnie zerkamy z niedowierzaniem na zakupy AWS - tak, zapłacili bilion za MS365. Czyżby nowy feature w ich infrastrukturze, czy po prostu chmura pełna ironii? Kończymy dyskusją o Terraform, gdzie Łukasz rozprawia się z klątwą, a Szymon broni, ale czy skutecznie? Zapnijcie pasy, startujemy!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Radius](https://radapp.io/)
