--- a/_posts/2023-11-10-91.md
+++ b/_posts/2023-11-10-91.md
@@ -31,6 +31,8 @@ newsletter:  |
 Tym razem rozkładamy na czynniki pierwsze świeżutki raport "State of DevOps Report" prosto z 2023 roku! Zagłębiamy się w DORA Metrics, aby zobaczyć, co naprawdę napędza wydajność naszych zespołów. Będzie też o user centricity – bo kto by pomyślał, że użytkownicy są ważni? 😉 Tune in i zobacz, co jeszcze wyłuskaliśmy z tego raportu!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [#47 2022 Accelerate State of DevOps Report - Patoarchitekci](https://patoarchitekci.io/47/)
