--- a/_posts/2023-11-17-92.md
+++ b/_posts/2023-11-17-92.md
@@ -36,6 +36,8 @@ newsletter:  |
 Tym razem na warsztat bierzemy prezentację GitHuba podczas GitHub Universe 2023. Pytanie: czy warto w ogóle tym zawracać sobie głowę? Zdecydowanie tak. Jakie kąski wyłowiliśmy z całości? To przede wszystkim Copilot chat na silniku GPT-4. AI wchodzi na salony! Omawiamy też wersję Enterprise Copilota i zastanawiamy się, czy za moment nie będzie must-have'm w każdej firmie. Dodatkowo grillujemy AI Powered Security Features i rozważamy, czy język naturalny może faktycznie stać się językiem programowania. Gotowi? To zaczynamy!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [#51 Github Universe 2022 - Patoarchitekci](https://patoarchitekci.io/51/)
