--- a/_posts/2023-11-24-93.md
+++ b/_posts/2023-11-24-93.md
@@ -32,6 +32,8 @@ newsletter:  |
 Dzisiaj robimy deep dive w .NET Conf i Ignite 2023. Nie sądziliście chyba, że przemilczymy ten temat? Omówimy kilka ciekawych i wartych uwagi rzeczy, takich jak Dynamic Profile Guided Optimization, i Microsoft Security Adoption Framework. Będzie też kilka słów o AI i oczywiście o Copilocie.  Zapowiada się inspirująco? A jakże. Ale żeby nie było zbyt grzecznie. Szymon wytknie pierdolnik w danych, Łukasz obawia się że zrealizuje się cyberpunkowy scenariusz i żąda ujebania regulacyjnego. Co tu się w ogóle zadziało?
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Introducing .NET Aspire: Simplifying Cloud-Native Development with .NET 8 - .NET Blog](https://devblogs.microsoft.com/dotnet/introducing-dotnet-aspire-simplifying-cloud-native-development-with-dotnet-8/)
