--- a/_posts/2023-12-01-94.md
+++ b/_posts/2023-12-01-94.md
@@ -41,6 +41,8 @@ Co poza tym? Rozmawiamy o konferencji Open AI Dev Day i możliwości budowania w
 Mimo tego marudzenia na początku - sporo się dzieje. Jak zwykle, rozmawiamy bez filtrów i upiększeń, więc na wielu tematach nie zsotawiamy suchej nitki. Za to potrafimy docenić naprawdę ciekawe pomysły. Co przeważyło tym razem? Posłuchaj! 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [New models and developer products announced at DevDay](https://openai.com/blog/new-models-and-developer-products-announced-at-devday)
