--- a/_posts/2023-12-08-95.md
+++ b/_posts/2023-12-08-95.md
@@ -37,6 +37,8 @@ Tym razem zaczynamy od szydery na .NET i odpalania jednej aplikacji od drugiej. 
 Na koniec stawiamy pytanie, czy zdalne środowiska developerskie mają sens? Jak myślicie? 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Post Davida Flow na X](https://twitter.com/davidfowl/status/1729710025004708277)
