--- a/_posts/2023-12-15-96.md
+++ b/_posts/2023-12-15-96.md
@@ -48,9 +48,11 @@ A to dopiero początek, bo mamy też w zanadrzu otwarte patoszkolenia. Co, jak, 
 Chcesz więcej? Posłuchaj nowego odcinka!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
-- [Meetup patoarchitekci.io z okazji 100 odcinka podcastu  ](https://pato100.konfeo.com/pl/groups)
+- [Meetup patoarchitekci.io z okazji 100 odcinka podcastu  ](https://events.teams.microsoft.com/event/e3c509f6-e713-41d9-a1bb-15a14436b030@7d58da1e-863a-433b-881a-eb613237f681)
 - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://easl.ink/9wfoD)
 - [[22.02.2024] Kubernetes the Hard Way](https://easl.ink/W4UpP)
 - [Top announcements of AWS re:Invent 2023  ](https://aws.amazon.com/blogs/aws/top-announcements-of-aws-reinvent-2023/)
