--- a/_posts/2023-12-22-97.md
+++ b/_posts/2023-12-22-97.md
@@ -37,10 +37,11 @@ Zapnijcie pasy i trzymajcie się mocno, bo dzisiaj zabieramy Was w szaloną podr
 Nie przegapcie też nadchodzącego setnego odcinka Patoarchitektów! Już 10 stycznia czeka na Was meetup w Warszawie, gdzie będziecie mieli niepowtarzalną okazję doświadczyć energii Szymona i Łukasza na żywo oraz spotkać się z innymi pasjonatami technologii. A to jeszcze nie wszystko! Specjalnie dla Was przygotowaliśmy  otwarte patoszkolenia, których nie możecie przegapić. Szczegóły znajdziecie w linkach do dzisiejszego odcinka i bezpośrednio w podcaście. Dołączcie do nas i bądźcie częścią tej niesamowitej technologicznej przygody!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
-- [Meetup w Warszawie - 10 stycznia 2024](https://pato100.konfeo.com/pl/groups)
-- [Otwarte patoszkolenie live [21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
+- [Meetup online z okazji 100. odcinka Pato - 17 stycznia 2024](https://events.teams.microsoft.com/event/e3c509f6-e713-41d9-a1bb-15a14436b030@7d58da1e-863a-433b-881a-eb613237f681)
 - [Otwarte patoszkolenie live [22.02.2024] Kubernetes the Hard Way](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way)
 - [Protopia](https://protopia.tech/)
 - [Profil Protopii na LinkedIn](https://www.linkedin.com/company/protopia-tech/)
