--- a/_posts/2024-01-12-98.md
+++ b/_posts/2024-01-12-98.md
@@ -42,6 +42,8 @@ Podczas rozmowy z Łukaszem i Szymonem, Andrzej skupia się na kluczowych aspekt
 **WAŻNE INFO!!** Zmieniamy termin MeetUp z okazji setnego odcinka Patoarchitektów! Niestety nie znaleźliśmy sali na 10 stycznia, więc spotykamy się online 17 stycznia o 15:00! Link znajdziesz poniżej. 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
