--- a/_posts/2024-01-19-99.md
+++ b/_posts/2024-01-19-99.md
@@ -41,6 +41,8 @@ newsletter:  |
 Tym razem rozkładamy na czynniki pierwsze zmiany w ocenach pracowników w tech-gigantach. Będzie też o tym, że audyty mogą nie być taką nudą, jak myślisz. Na deser serwujemy gorące newsy z świata baz danych. SLI, SLO i cała masa technicznych smaczków czekają!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Time based vs Event based SLIs](https://blog.alexewerlof.com/p/time-based-vs-event-based)
