--- a/_posts/2024-01-26-100.md
+++ b/_posts/2024-01-26-100.md
@@ -45,6 +45,8 @@ Rozmawiamy o Kubernetes, dzieląc się sekretami modelowania danych w SQL i NoSQ
 Dodatkowo przypominamy o naszych patoszkoleniach. Szczegóły w linkach poniżej!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
