--- a/_posts/2024-02-02-101.md
+++ b/_posts/2024-02-02-101.md
@@ -44,6 +44,8 @@ Nowy odcinek i nowe zamieszanie. Lubimy zamieszać w świecie IT, żeby się nie
 
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
@@ -58,6 +60,8 @@ Linki i ciekawe znaleziska:
 - [AnthropicAI Tweet](https://twitter.com/AnthropicAI/status/1745854910774788107)
 - [Sleeper Agents: Training Deceptive LLMs that Persist Through Safety Training \ Anthropic](https://www.anthropic.com/news/sleeper-agents-training-deceptive-llms-that-persist-through-safety-training)
 - [[2401.05566] Sleeper Agents: Training Deceptive LLMs that Persist Through Safety Training](https://arxiv.org/abs/2401.05566)
+- [Otwarte patoszkolenie live [21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
+- [[22.02.2024] Kubernetes the Hard Way](https://app.easycart.pl/checkout/78499600/22022024-kubernetes-the-hard-way)
 
 ### Transkrypcja
 
