--- a/_posts/2024-02-16-103.md
+++ b/_posts/2024-02-16-103.md
@@ -55,6 +55,8 @@ Porozmawiamy również o tym, jak zmienia się rola bezpieczników w świecie IT
 Nie zabraknie także praktycznych porad, jak zacząć swoją przygodę z bezpieczeństwem aplikacji, nawet jeśli dotychczas skupiałeś się wyłącznie na programowaniu. Przygotuj się na solidną dawkę wiedzy, która może zmienić Twój sposób myślenia o bezpieczeństwie w IT!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [[21.02.2024] Modelowanie danych nie tylko w NoSQL](https://app.easycart.pl/checkout/78499600/21-02-2024-modelowanie-danych-nie-tylko-w-nosql)
