--- a/_posts/2024-02-23-104.md
+++ b/_posts/2024-02-23-104.md
@@ -48,6 +48,8 @@ Do tego, zagłębiamy się w tajniki cell architecture, dzięki którym zrozumie
 Przygotuj się na solidną dawkę wiedzy, kontrowersji i nieoczekiwanych zwrotów akcji, serwowanych w niepowtarzalnym, luźnym stylu, za który "Patoarchitekci" są kochani i cenieni. To odcinek, który zmieni sposób, w jaki patrzysz na technologie – i nie możesz go przegapić!
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [Slack’s Migration to a Cellular Architecture](https://slack.engineering/slacks-migration-to-a-cellular-architecture/)
