--- a/_posts/2024-03-01-105.md
+++ b/_posts/2024-03-01-105.md
@@ -45,6 +45,8 @@ Dodatkowo, zastanawiamy się nad rosnącą odpowiedzialnością tech leadów i w
 Dyskutujemy także o nowinkach w świecie MySQL i wyzwaniach związanych z integracją JavaScript, zmianach licencyjnych VMware oraz rozwoju projektów open-source takich jak Nginx w kontekście korporacyjnych i społecznych nacisków.
 
 
+Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
+
 Linki i ciekawe znaleziska:
 
 - [AWS to Shut down Aurora Serverless v1, Their Sole Relational Database with Scaling Capacity to Zero - InfoQ](https://www.infoq.com/news/2024/01/aurora-serverless-v1-retirement/)
